--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
 font-family: 'Raleway', sans-serif; */
 
 body {
-    background-color: greenyellow;
+    background-color: #333;
 }
 .head {
     font-family: 'Mountains of Christmas', cursive;
